name:              codecamp15
version:           0.0.1
cabal-version:     >= 1.8
build-type:        Simple

executable         codecamp15
    main-is:           Main.hs
    hs-source-dirs:    src
    build-depends:     
                       base                          >= 4          && < 5,
                       yesod                         >= 1.4.1      && < 1.5,
                       HTTP,
                       utf8-string,
                       transformers,
                       astar,
                       aeson,
                       bytestring,
                       containers

